objects/Requested_Day__c.object
<CustomObject>
    <customHelp>TOM_User_Guide</customHelp>
    <description>TOM: A specific day requested for time-off, to be processed by the payroll system in a specific pay cycle</description>
    <fields>
        <fullName>Do_not_include_in_Pay_Cycle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to be used in exception situations like employee termination payout to avoid sending an approved requested day record to the payroll system.</description>
        <label>Do not include in Pay Cycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_of_Request__c</fullName>
        <formula>CASE( MONTH(Requested_Day__c),  1, &quot;01-January&quot;, 2, &quot;02-February&quot;, 3, &quot;03-March&quot;, 4, &quot;04-April&quot;, 5, &quot;05-May&quot;, 6, &quot;06-June&quot;, 7, &quot;07-July&quot;, 8, &quot;08-August&quot;, 9, &quot;09-September&quot;, 10, &quot;10-October&quot;, 11, &quot;11-November&quot;, 12, &quot;12-December&quot;, &quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Cycle</label>
        <referenceTo>Pay_Cycle__c</referenceTo>
        <relationshipName>Time_Off_Request_Payroll_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Day__c</fullName>
        <label>Requested Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Off_Request__c</fullName>
        <label>Time-Off Request</label>
        <referenceTo>Time_Off_Request__c</referenceTo>
        <relationshipName>Time_Off_Request_Payroll_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Requested Day</label>
    <nameField>
        <displayFormat>TORD-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>